# little-love

./: .dockerignore  .gitignore  .secrets.env.example  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  docker-compose.minio.yml  docker-compose.yml  ngrok.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: README.md  pubspec.yaml
app/assets/app-icon/: README.md
app/ios/Flutter/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
app/ios/NotificationService/: NotificationService.entitlements  NotificationService.swift
app/ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements  SceneDelegate.swift
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/RunnerTests/: PaletteArtworkTests.swift
app/ios/Shared/: PaletteArtwork.swift
app/lib/: config.dart  conversation_page.dart  main.dart  ws_client.dart
app/lib/attachment/: attachment_descriptor.dart  attachment_download.dart  attachment_upload.dart  attachment_viewer.dart  file_crypto.dart  media_actions.dart  staged_attachment.dart  thumbnail.dart
app/lib/audio/: message_feedback.dart  playback_controller.dart  playback_provider.dart  recorder_controller.dart  waveform.dart
app/lib/calling/: call_controller.dart  call_log.dart  call_privacy.dart  call_screen.dart  call_session.dart  call_signaling.dart  call_state.dart  glare.dart  ringback.dart  turn_credentials.dart
app/lib/conversation/: audio_bubble.dart  chat_info_page.dart  conversation_page.dart  incoming_banner_host.dart  incoming_banner_provider.dart  last_seen_label.dart  link_preview.dart  message_content.dart  message_db.dart  message_db_key.dart  message_search.dart  message_search_page.dart  message_store.dart  presence_state.dart  recording_overlay.dart  reply_ref.dart  room_key_cache.dart  room_message_router.dart  send_fanout.dart  typing_state.dart
app/lib/crypto/: ecdh.dart
app/lib/diagnostics/: crash_reporting.dart  scrub.dart
app/lib/identity/: account_local.dart  bip39.dart  current_identity.dart  dev_provision.dart  keypair.dart  keystore.dart  providers.dart  sign_out.dart
app/lib/inbox/: active_room_provider.dart  channel_switcher.dart  conversation_list_item.dart  drawer.dart  global_search_page.dart  inbox_state.dart  layout_scaffold.dart  mock_fixtures.dart  navigation_rail.dart  owned_bots_provider.dart  pending_invites_provider.dart  read_state_provider.dart  read_state_store.dart  room.dart  (+2 more)
app/test/: config_test.dart  conversation_page_test.dart  ws_client_test.dart
app/windows/: CMakeLists.txt
bot/: Cargo.toml  README.md
bot/src/: addr_guard.rs  character_card.rs  cli.rs  doctor.rs  history.rs  identity_store.rs  lib.rs  llm.rs  main.rs  memory.rs  pair.rs  persona.rs  rest.rs  run.rs  show_identity.rs  summary_task.rs  ws_client.rs
bot/tests/: addr_guard_table.rs  character_card.rs  doctor_smoke.rs  e2e_ignored.rs  identity_store_round_trip.rs  llm_mock.rs  memory_smoke.rs  persona_resolver.rs  rest_signup.rs  ws_handshake.rs
crypto/: Cargo.toml
crypto/src/: aead.rs  ecdh.rs  identity.rs  invite.rs  lib.rs  sig.rs
crypto/tests/: aead_parity.rs  domain_separation.rs  invite_vectors.rs
docs/: error-monitoring.md  positioning.md  railway.md
docs/mocks/: attachments.html  bot-hosts.html  conversation-view-dark.html  conversation-view.html  palette-gallery.html
infra/cloudflare/: .terraform.lock.hcl  README.md  dns.tf  email.tf  example.tfvars  main.tf  outputs.tf  r2.tf  ratelimit.tf  turn.tf  variables.tf  versions.tf
mocks/v0.2/: confirm-phrase.html  inbox-drawer.html  inbox-empty.html  inbox-rail.html  inbox-with-rooms.html  index.html  signup-phrase.html  signup-username.html  welcome.html
mocks/v0.3/: conversation-three.html  create-chat-invite.html  create-chat-pick.html  inbox-familiars.html  index.html  invite-preview-multi.html
mocks/v0.4/: channel-switcher-open.html  channel-with-familiar.html  create-channel.html  home-partner-dm.html  message-status.html  onboarding.html
scripts/: bot-run.sh  demo.sh  dev-attachments.sh  dev-couple.json  dev-down.sh  dev-env.sh  dev-phones.sh  dev-up.sh  dev-voip-push.sh  gen_message_sounds.py  generate-app-icons.sh  ios-deploy.sh  ios-run.sh  railway-bootstrap.sh  release.sh  sim-couple.sh
server/: Cargo.toml  Dockerfile  PUSH.md
server/migrations/: 0001_create_messages.sql  0002_accounts.sql  0003_invites.sql  0004_rooms.sql  0005_alter_messages.sql  0006_v0_3_partner_and_bot.sql  0007_bot_delete_challenges.sql  0008_invite_kind.sql  0009_retire_familiars.sql  0010_message_read_at.sql  0011_attachments.sql  0012_device_push_tokens.sql  0013_profile.sql  0013_voip_push_token_kind.sql  0014_profile_avatar_key_on_delete.sql  0016_last_seen.sql
server/src/: accounts.rs  attachments.rs  auth.rs  calls.rs  config.rs  diag.rs  invites.rs  lib.rs  main.rs  profiles.rs  push.rs  push_tokens.rs  r2.rs  rooms.rs  routing.rs  scrub.rs  store.rs  turn.rs  well_known.rs  wire.rs  wordlist_bip39_en.rs  ws.rs
server/tests/: accounts_create.rs  accounts_lookup.rs  accounts_schema.rs  attachments_presign.rs  attachments_store.rs  auth_handshake.rs  bip39_invite_codes.rs  bot_delete.rs  bot_register.rs  create_room_reinvite.rs  forwards_message.rs  health.rs  invite_preview_members.rs  invites_consume.rs  invites_create.rs  invites_familiar.rs  last_seen_store.rs  last_seen_ws.rs  migration_0006_backfill.rs  migration_0006_schema.rs  migration_0008_schema.rs  migration_0010_schema.rs  migration_0011_schema.rs  migration_0012_schema.rs  minio_roundtrip.rs  monogamy.rs  partner_helpers.rs  partner_race.rs  profiles_store.rs  profiles_ws.rs  push_send_ws.rs  push_tokens_store.rs  read_receipts_store.rs  read_receipts_ws.rs  replays_history.rs  room_mutations.rs  rooms_detail.rs  rooms_owned_bots.rs  rooms_routing.rs  store.rs  (+3 more)
server/tests/common/: mod.rs
server/tests/data/: invite_vectors.json
web/: DEPLOY.md  README.md  _redirects  index.html  main.js  sitemap.xml  styles.css  wrangler.jsonc
web/pair/: index.html
web/public/: 404.html  _headers  _redirects  fonts.css  index.html  robots.txt  styles.css
web/terms/: index.html
(+275 files in other folders)
