[workspace]
members = ["server"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "UNLICENSED"

[workspace.dependencies]
anyhow      = "1"
axum        = { version = "0.7", features = ["ws", "macros"] }
chrono      = { version = "0.4", features = ["serde"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros", "migrate"] }
thiserror   = "1"
tokio       = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.21"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4", "serde"] }
