[workspace]
members = ["crypto", "server", "bot"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "UNLICENSED"

[workspace.dependencies]
anyhow      = "1"
axum        = { version = "0.7", features = ["ws", "macros"] }
chrono      = { version = "0.4", features = ["serde"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros", "migrate"] }
thiserror   = "1"
tokio       = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.21"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4", "serde"] }
base64           = "0.22"
ed25519-dalek    = { version = "2", features = ["rand_core"] }
x25519-dalek     = { version = "2", features = ["static_secrets"] }
hkdf             = "0.12"
sha2             = "0.10"
chacha20poly1305 = "0.10"
rand             = "0.8"
hex              = "0.4"
qrcode           = "0.14"
image            = { version = "0.25", default-features = false, features = ["png"] }
littlelove-crypto = { path = "crypto" }
clap        = { version = "4", features = ["derive", "env"] }
directories = "5"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
png         = "0.17"
url         = "2"
