[package]
name        = "littlelove-bot"
version     = "0.1.0"
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[lib]
name = "littlelove_bot"
path = "src/lib.rs"

[[bin]]
name = "littlelove-bot"
path = "src/main.rs"

[dependencies]
littlelove-crypto = { workspace = true }
anyhow            = { workspace = true }
base64            = { workspace = true }
chrono            = { workspace = true }
clap              = { workspace = true }
directories       = { workspace = true }
ed25519-dalek     = { workspace = true }
futures           = { workspace = true }
hkdf              = { workspace = true }
png               = { workspace = true }
sha2              = { workspace = true }
rand              = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
url               = { workspace = true }
uuid              = { workspace = true }
rusqlite          = { version = "0.29", features = ["bundled"] }
regex             = "1"

[dev-dependencies]
axum       = { workspace = true }
hex        = { workspace = true }
tempfile   = "3"
