[package]
name = "littlelove-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "littlelove-api"
path = "src/main.rs"

[lib]
name = "littlelove_api"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
chrono.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tokio-tungstenite.workspace = true
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serial_test = { version = "3", features = ["file_locks"] }
